--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <canvas id="canv"></canvas>
       </div>
     </div>
-    <img id="ci1" src="maps/ci1_resized.png" class="hidden">
-    <img id="bgd" src="maps/me.png" class="hidden">
+    <img id="ci1" src="maps\SNES - F-Zero - Big Blue.png" class="hidden">
     <script src="mode7.js"></script>
     <script src="demo.js"></script>
   </body>
