--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <canvas id="canv"></canvas>
       </div>
     </div>
-    <img id="ci1" src="maps\SNES - F-Zero - Big Blue.png" class="hidden">
+    <img id="ci1" src="maps\SNES - F-Zero - White Land I II.png" class="hidden">
     <script src="mode7.js"></script>
     <script src="demo.js"></script>
   </body>
